--- a/ben-cowper-about.html
+++ b/ben-cowper-about.html
@@ -90,7 +90,7 @@ A partial list of my film credits can be found <a target="_blank" href="Ben Cowp
 
 <br>
 
-<h3 style="text-align: left;">Areas of Technical Expertise:</h3>
+<h3 style="text-align: left;">Areas of Expertise:</h3>
 
 <br>
 
@@ -112,7 +112,13 @@ A partial list of my film credits can be found <a target="_blank" href="Ben Cowp
   <b>Web Design and Coding</b> in Python, HTML, CSS or custom designs in Drupal, Squarespace, and Wordpress.
 </p>
 
-<br><br><br>
+<br><br>
+
+<p>
+	I am a private tutor and professional consultant in all of the above topics. If you are interested in working with me in either capacity you can send me an email at <a href="mailto:cowpervideos@gmail.com">cowpervideos@gmail.com</a>
+</p>
+
+<br><br><br><br><br>
 
 <p>
 	Note: there is another Ben Cowper who makes films. He lives in New Zealand and we are not the same person.
