--- a/design-marketing.html
+++ b/design-marketing.html
@@ -52,7 +52,7 @@
   </div>
 </div>
 
-<footer>All content Copyright Ben Cowper, 2019</footer>
+<footer>All content Copyright Ben Cowper, 2020 cowpervideos@gmail.com</footer>
 
 <body>
 
