--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ body, html {
   </div>
 </div>
 
-<footer>All content Copyright Ben Cowper, 2019</footer>
+<footer>All content Copyright Ben Cowper, 2020 cowpervideos@gmail.com</footer>
 
 <body>
 
