--- a/personalized-tutoring.html
+++ b/personalized-tutoring.html
@@ -60,7 +60,7 @@
 
 <hr color="#50A8AF">
 <h2>Personalized Tutoring</h2>
-<h3>Learn remotely or in person</h3>
+<h3>Learn advanced techniques remotely</h3>
 <hr color="#50A8AF">
 <br>
 
