--- a/ben-cowper-about.html
+++ b/ben-cowper-about.html
@@ -52,7 +52,7 @@
   </div>
 </div>
 
-<footer>All content Copyright Ben Cowper, 2020 cowpervideos@gmail.com</footer>
+<footer>All content Copyright Ben Cowper, 2020 ben@bcowper.com</footer>
 
 <body>
 
@@ -60,7 +60,7 @@
 
 <hr color="#50A8AF">
 <h2>Ben Cowper</h2>
-<h3>cowpervideos@gmail.com</h3>
+<h3>ben@bcowper.com</h3>
 <hr color="#50A8AF">
 <br>
 
@@ -76,7 +76,7 @@ I have always loved working with video, and began producing professional work in
 
 <br><br>
 
-At the moment I am most interested in collaborative narrative and documentary film, audio storytelling, interactive or experimental installation, and commercial work. If you would like to work together you can send me an email at <a href="mailto:cowpervideos@gmail.com">cowpervideos@gmail.com</a>
+At the moment I am most interested in collaborative narrative and documentary film, audio storytelling, interactive or experimental installation, and commercial work. If you would like to work together you can send me an email at <a href="mailto:ben@bcowper.com">ben@bcowper.com</a>
 
 <br><br>
 
@@ -115,7 +115,7 @@ A partial list of my film credits can be found <a target="_blank" href="Ben Cowp
 <br><br>
 
 <p>
-	I am a private tutor and professional consultant in all of the above topics. If you are interested in working with me in either capacity you can send me an email at <a href="mailto:cowpervideos@gmail.com">cowpervideos@gmail.com</a>
+	I am a private tutor and professional consultant in all of the above topics. If you are interested in working with me in either capacity you can send me an email at <a href="mailto:ben@bcowper.com">ben@bcowper.com</a>
 </p>
 
 <br><br><br><br><br>
