--- a/fiction-film-portfolio.html
+++ b/fiction-film-portfolio.html
@@ -69,7 +69,7 @@
   </div>
 </div>
 
-<footer>All content Copyright Ben Cowper, 2020 cowpervideos@gmail.com</footer>
+<footer>All content Copyright Ben Cowper, 2020 ben@bcowper.com</footer>
 
 <body>
 
@@ -142,7 +142,7 @@ $(function(){
 <br><br>
   director, editor, cinematographer
 <br><br>
-  An experimental horror film about a hitchhiker's descent into madness, adapted from a short story by Stephen King. The film was produced through King's dollar baby program as my thesis film at Hampshire College. For a private screening, please <a href="mailto:cowpervideos@gmail.com">contact me</a> directly.
+  An experimental horror film about a hitchhiker's descent into madness, adapted from a short story by Stephen King. The film was produced through King's dollar baby program as my thesis film at Hampshire College. For a private screening, please <a href="mailto:ben@bcowper.com">contact me</a> directly.
 <br><br>
 	Read <a target="_blank" href="https://terror.ca/movie/tt5865034">a review of Nona</a> by Steve Hutchison of Tales of Terror, a comprehensive database of horror film reviews.
 <br><br>
