--- a/personalized-tutoring.html
+++ b/personalized-tutoring.html
@@ -52,7 +52,7 @@
   </div>
 </div>
 
-<footer>All content Copyright Ben Cowper, 2020 cowpervideos@gmail.com</footer>
+<footer>All content Copyright Ben Cowper, 2020 ben@bcowper.com</footer>
 
 <body>
 
@@ -72,7 +72,7 @@
 
 <p>
 
-I teach one on one personalized courses for individuals and groups interested in learning video production and photography techniques. I work remotely using screen sharing and voice/video chat. We look at your work from your computer on your schedule. Please contact me at <a href="mailto:cowpervideos@gmail.com">cowpervideos@gmail.com</a> to set up a lesson and tell me about what you're interested in learning.
+I teach one on one personalized courses for individuals and groups interested in learning video production and photography techniques. I work remotely using screen sharing and voice/video chat. We look at your work from your computer on your schedule. Please contact me at <a href="mailto:ben@bcowper.com">ben@bcowper.com</a> to set up a lesson and tell me about what you're interested in learning.
 
 <br>
 
