--- a/photography-portfolio.html
+++ b/photography-portfolio.html
@@ -67,7 +67,7 @@
   </div>
 </div>
 
-<footer>All content Copyright Ben Cowper, 2020 cowpervideos@gmail.com</footer>
+<footer>All content Copyright Ben Cowper, 2020 ben@bcowper.com</footer>
 
 <body>
 
