--- a/photography-portfolio.html
+++ b/photography-portfolio.html
@@ -143,7 +143,7 @@
 <p>
 Various stills from productions I have worked on:
 <br><br>
-<i>"Untitled", Nona, Science ka Adda, Hazard Lights, Something Restless, </i>and<i> falls into sky.</i>
+<i>After the Bend, Nona, Science ka Adda, Hazard Lights, Something Restless, </i>and<i> falls into sky.</i>
 </p>
 </div>
 </div>
